tests/should-fail/flags/overflowing-hex-literal.j
//# +checknumberliterals
function test takes nothing returns nothing
    local integer x = 0x100000000
endfunction

